delete schema medicine
