# backend/docs/swagger.yaml
@@ -41,15 +41,6 @@ definitions:
           $ref: '#/definitions/ent.Prescription'
         type: array
     type: object
-  ent.Medicine:
-    properties:
-      Medicine_Name:
-        description: MedicineName holds the value of the "Medicine_Name" field.
-        type: string
-      id:
-        description: ID of the ent.
-        type: integer
-    type: object
   ent.Mmedicine:
     properties:
       Mmedicine_Name:
@@ -338,157 +329,6 @@ paths:
           schema:
             $ref: '#/definitions/gin.H'
       summary: Update a doctor entity by ID
-  /medicines:
-    get:
-      description: list medicine entities
-      operationId: list-medicine
-      parameters:
-      - description: Limit
-        in: query
-        name: limit
-        type: integer
-      - description: Offset
-        in: query
-        name: offset
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            items:
-              $ref: '#/definitions/ent.Medicine'
-            type: array
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/gin.H'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/gin.H'
-      summary: List medicine entities
-    post:
-      consumes:
-      - application/json
-      description: Create medicine
-      operationId: create-medicine
-      parameters:
-      - description: Medicine entity
-        in: body
-        name: medicine
-        required: true
-        schema:
-          $ref: '#/definitions/ent.Medicine'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/ent.Medicine'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/gin.H'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/gin.H'
-      summary: Create medicine
-  /medicines/{id}:
-    delete:
-      description: get medicine by ID
-      operationId: delete-medicine
-      parameters:
-      - description: Medicine ID
-        in: path
-        name: id
-        required: true
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/gin.H'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/gin.H'
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/gin.H'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/gin.H'
-      summary: Delete a medicine entity by ID
-    get:
-      description: get medicine by ID
-      operationId: get-medicine
-      parameters:
-      - description: Medicine ID
-        in: path
-        name: id
-        required: true
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/ent.Medicine'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/gin.H'
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/gin.H'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/gin.H'
-      summary: Get a medicine entity by ID
-    put:
-      consumes:
-      - application/json
-      description: update medicine by ID
-      operationId: update-medicine
-      parameters:
-      - description: Medicine ID
-        in: path
-        name: id
-        required: true
-        type: integer
-      - description: Medicine entity
-        in: body
-        name: medicine
-        required: true
-        schema:
-          $ref: '#/definitions/ent.Medicine'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/ent.Medicine'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/gin.H'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/gin.H'
-      summary: Update a medicine entity by ID
   /mmedicines:
     get:
       description: list mmedicine entities
